--- a/src/templates/display.html
+++ b/src/templates/display.html
@@ -3,18 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Display Interests</title>
+    <title>Story</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-    <h1>Your Top 3 Interests</h1>
-    <div class="interests-box">
-        <ul>
-            {% for interest in interests %}
-                <li>{{ interest }}</li>
-            {% endfor %}
-        </ul>
+    <h1>Your Story</h1>
+    <div class="story-box">
+        <p>{{ story }}</p>
     </div>
 </body>
 </html>
