--- a/src/templates/input.html
+++ b/src/templates/input.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <h1>Enter Your Top 3 Interests</h1>
-    <form action="/display" method="post">
+    <form class="form-input" action="/display" method="post">
         <label for="interest1">Interest 1:</label>
-        <input type="text" id="interest1" name="interest1"><br><br>
+        <input type="text" id="interest1" name="interest1">
         <label for="interest2">Interest 2:</label>
-        <input type="text" id="interest2" name="interest2"><br><br>
+        <input type="text" id="interest2" name="interest2">
         <label for="interest3">Interest 3:</label>
-        <input type="text" id="interest3" name="interest3"><br><br>
+        <input type="text" id="interest3" name="interest3">
         <input type="submit" value="Submit">
     </form>
 </body>
